[package]
name = "cpreprocess"
version = "1.0.0"
edition = "2021"
description = "Procedural macro that runs a C preprocessor on the input"
authors = ["William Venner <william@venner.io>"]
license = "MIT"
keywords = ["c", "preprocessor", "preprocess"]
repository = "https://github.com/WilliamVenner/cpreprocess"

[lib]
proc-macro = true

[dependencies]
cc = "1"
lazy_static = "1"
uuid = { version = "0", features = ["v4"] }
syn = "1"