[package]
name = "cpreprocess"
version = "1.0.2"
edition = "2021"
description = "Procedural macro that runs a C preprocessor on the input"
authors = ["William Venner <william@venner.io>"]
license = "MIT"
keywords = ["c", "preprocessor", "preprocess"]
repository = "https://github.com/WilliamVenner/cpreprocess"

[lib]
proc-macro = true

[features]
nightly = ["proc-macro-faithful-display"]

[dependencies]
cc = "1"
lazy_static = "1"
uuid = { version = "0", features = ["v4"] }
syn = "1"
proc-macro-faithful-display = { version = "0", optional = true }